Feat: Ajout dans l'entity Dedicace de l'ip et Update de la config EasyAdmin (Dedidace)

--- a/config/packages/admin/entities/Dedicace.yaml
+++ b/config/packages/admin/entities/Dedicace.yaml
@@ -4,4 +4,25 @@ easy_admin:
       class: App\Entity\Dedicace
       list:
         actions: [-new]
+        fields:
+          - id
+          - date
+          - ip
+          - pseudo
+          - message
+      new:
+        fields:
+          - pseudo
+          - message
+      edit:
+        fields:
+          - pseudo
+          - message
+      show:
+        fields:
+          - id
+          - date
+          - ip
+          - pseudo
+          - message
 
