--- a/config/packages/admin/entities/Category.yaml
+++ b/config/packages/admin/entities/Category.yaml
@@ -5,3 +5,9 @@ easy_admin:
       form:
         fields:
           - {property: 'name'}
+      list:
+        fields:
+          - id
+          - name
+          - slug
+          - actualities
