Feat: Mise en place de l'entity User

--- a/config/packages/admin/menu.yaml
+++ b/config/packages/admin/menu.yaml
@@ -18,6 +18,7 @@ easy_admin:
           - {entity: 'Contact', icon: 'address-book-o', label: 'Formulaire'}
           - {entity: 'Subject', icon: 'map-marker', label: 'Destinataire'}
       - label: 'Menu'
+        icon: bars
         children:
-          - {entity: 'Emission', label: 'Emission'}
+          - {entity: 'Emission', icon: 'arrow-alt-circle-right', label: 'Emission'}
 
